Changed Skills labeling
Changed how experienced I am in each skill to better represent it.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">html5</p>
                         <div class="progress-con">
-                            <p class="prog-text">80%</p>
+                            <p class="prog-text">Proficient</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
@@ -65,7 +65,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">css3</p>
                         <div class="progress-con">
-                            <p class="prog-text">95%</p>
+                            <p class="prog-text">Expert</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
@@ -74,7 +74,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">javascript</p>
                         <div class="progress-con">
-                            <p class="prog-text">65%</p>
+                            <p class="prog-text">Competent</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
@@ -83,7 +83,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Python</p>
                         <div class="progress-con">
-                            <p class="prog-text">70%</p>
+                            <p class="prog-text">Competent</p>
                             <div class="progress">
                                 <span class="Python"></span>
                             </div>
@@ -92,7 +92,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Java</p>
                         <div class="progress-con">
-                            <p class="prog-text">80%</p>
+                            <p class="prog-text">Profecient</p>
                             <div class="progress">
                                 <span class="java"></span>
                             </div>
@@ -101,7 +101,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">C++</p>
                         <div class="progress-con">
-                            <p class="prog-text">85%</p>
+                            <p class="prog-text">Profecient</p>
                             <div class="progress">
                                 <span class="cplusplus"></span>
                             </div>
@@ -110,7 +110,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">CAD</p>
                         <div class="progress-con">
-                            <p class="prog-text">85%</p>
+                            <p class="prog-text">Profecient</p>
                             <div class="progress">
                                 <span class="cad"></span>
                             </div>
