--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="hover-items">
                         <h3>PARAM</h3>
                         <div class="icons">
-                            <a href="https://github.com/colinjoygeorge/Portfolio.git" class="icon">
+                            <a href="https://github.com/shahpn/parthifical-intelligence" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
